# cmake-exercise

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
